style.css
@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');


@font-face {
    font-family: "lemon milk";
    src: url(fonts/lemon_milk/LEMONMILK-Regular.otf) format("opentype");
}


:root {
    --bg-color-1: #0F172A;
    --bg-color-2: #1E293B;
    --font-color: #F8FAFC;
    --shadow-color: #38BDF8;
}


body {
    background-color: var(--bg-color-1);
    color: var(--shadow-color);
    margin: 0;
    overflow: hidden;
    
}

.hero{
    background-color: black;
    position: absolute;
    top: 0;
    margin: 0;
    width: 100vw;
    height: 100vh;
    color: white;
    z-index: 1;
}

.hero p{
    font-family: 'Nunito', sans-serif;
    font-size: 5em;
    top: 0;
    font-style: italic;
    letter-spacing: 0;
    animation: none;
    text-align: center;
    margin-top: 10%;
}

.char{
    animation: jump 2.5s ease-in-out infinite;
    animation-delay: calc(var(--char-index) * 0.1s);
}


@keyframes jump {
    0% {
        transform: translateY(0);
    }

    50% {
        transform: translateY(-20px);
    }

    100% {
        transform: translateY(0);
    }
}

#btn {
    margin-left: 48%;
    margin-top: 10%;
}

/* From Uiverse.io by doniaskima */ 
.btn-17,
.btn-17 *,
.btn-17 :after,
.btn-17 :before,
.btn-17:after,
.btn-17:before {
  border: 0 solid;
  box-sizing: border-box;
}

.btn-17 {
  -webkit-tap-highlight-color: transparent;
  -webkit-appearance: button;
  background-color: #000;
  background-image: none;
  color: #fff;
  cursor: pointer;
  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
    Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif,
    Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
  font-size: 100%;
  font-weight: 900;
  line-height: 1.5;
  margin: 0;
  -webkit-mask-image: -webkit-radial-gradient(#000, #fff);
  padding: 0;
  text-transform: uppercase;
}

.btn-17:disabled {
  cursor: default;
}

.btn-17:-moz-focusring {
  outline: auto;
}

.btn-17 svg {
  display: block;
  vertical-align: middle;
}

.btn-17 [hidden] {
  display: none;
}

.btn-17 {
  border-radius: 99rem;
  border-width: 2px;
  padding: 0.8rem 3rem;
  z-index: 0;
}

.btn-17,
.btn-17 .text-container {
  overflow: hidden;
  position: relative;
}

.btn-17 .text-container {
  display: block;
  mix-blend-mode: difference;
}

.btn-17 .text {
  display: block;
  position: relative;
}

.btn-17:hover .text {
  -webkit-animation: move-up-alternate 0.3s forwards;
  animation: move-up-alternate 0.3s forwards;
}

@-webkit-keyframes move-up-alternate {
  0% {
    transform: translateY(0);
  }

  50% {
    transform: translateY(80%);
  }

  51% {
    transform: translateY(-80%);
  }

  to {
    transform: translateY(0);
  }
}

@keyframes move-up-alternate {
  0% {
    transform: translateY(0);
  }

  50% {
    transform: translateY(80%);
  }

  51% {
    transform: translateY(-80%);
  }

  to {
    transform: translateY(0);
  }
}

.btn-17:after,
.btn-17:before {
  --skew: 0.2;
  background: #fff;
  content: "";
  display: block;
  height: 102%;
  left: calc(-50% - 50% * var(--skew));
  pointer-events: none;
  position: absolute;
  top: -104%;
  transform: skew(calc(150deg * var(--skew))) translateY(var(--progress, 0));
  transition: transform 0.2s ease;
  width: 100%;
}

.btn-17:after {
  --progress: 0%;
  left: calc(50% + 50% * var(--skew));
  top: 102%;
  z-index: -1;
}

.btn-17:hover:before {
  --progress: 100%;
}

.btn-17:hover:after {
  --progress: -102%;
}

/* fin bouton uiverse */

header {
    width:100%;
    height: 88vh;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    flex-direction: column;
    gap: 0;
}


header table{
    font-size: 10em;
    font-family: "lemon milk", sans-serif;
    position: absolute;
    top: 15%;
    color: var(--font-color);
}

.nom{
    border-radius: 15px;
    text-shadow: 8px -5px var(--shadow-color);
}

.prenom{
    text-shadow: 8px -5px var(--shadow-color);
}

header p{
    position: absolute;
    top: 75%;
    font-size: 4em;
    font-style: normal;
    letter-spacing: 5px;
    animation: animationscroll 2s ease-in-out infinite alternate;
}

@keyframes animationscroll {
    0%{
        transform: translateY(10px)
    }

    100%{
        transform: translateY(-10px); 
    }

}

.carroussel{
    font-family: 'Nunito', sans-serif;
    margin-top: 20px;
    display: flex;
    flex-direction: row;
    font-size: 5em;
    justify-content: space-evenly;
    overflow-x: hidden;
}

.group{
    display: flex;
    gap: 3em;
    padding-right: 3em;
    animation: carroussel 40s linear infinite;
}

.group li{
    list-style-type: none;
}

a{
    text-decoration: none;
    color: var(--font-color);
}

@keyframes carroussel {
    0%{
        transform: translateX(0);
    }
    100%{
        transform: translateX(-100%);
    }
}

.profil{
    background-color: var(--bg-color-3);
    font-size: 1.5em;
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
    height: 15em;
    width: 100%;
}

.profil p{
  width: 75%;
  font-family: 'Nunito', sans-serif;
  font-size: 1.75rem;
}

.profil span{
  color: var(--font-color);
}
.pdp {
    width: 300px;
    height: 300px;
    border-radius: 100%;
    box-shadow: 0 0 50px var(--shadow-color);
    border: solid 2px var(--font-color);
}

main section h1 {
  font-family: "lemon milk", sans-serif;
  font-size: 5em;
  color: var(--font-color);
  text-shadow: 5px -5px var(--shadow-color);
  margin-left: 35%;
}

.project-wrapper{
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 20px;
  padding: 50px;
  grid-auto-rows: 300px;
}
.project-wrapper div{
  background-color: white;
  border-radius: 20px;
  padding: 20px;
}

